v.1.0.12

- Asset compression #RDKRACZ
- Reduced argo range of mobs from 50 blocks to 25 blocks.- Fixed Technodemons spawning in Wart trees.- No longer bundle Cloth Config, now set a requirement on CurseForge and the mod.json. Makes mod smaller.- Fixed Patchouli book.- Fixed Patchouli book.- Fixed Technodemons Spawn Egg spawns, now more random.