@@ -1,12 +1,14 @@
 package mod.azure.hwg.util;
 
+import java.util.List;
+
 import mod.azure.hwg.HWGMod;
 import mod.azure.hwg.config.HWGConfig.Spawning;
 import mod.azure.hwg.util.registry.HWGMobs;
 import net.fabricmc.fabric.api.biome.v1.BiomeModifications;
+import net.fabricmc.fabric.api.biome.v1.BiomeSelectionContext;
 import net.fabricmc.fabric.api.biome.v1.BiomeSelectors;
 import net.minecraft.entity.SpawnGroup;
-import net.minecraft.world.biome.Biome;
 
 @SuppressWarnings("deprecation")
 public class MobSpawn {
@@ -15,61 +17,27 @@ public class MobSpawn {
 
 	public static void addSpawnEntries() {
 		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInOverworld()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.FOREST),
+				BiomeSelectors.all().and(context -> parseBiomes(config.merc_biomes, context)),
 				SpawnGroup.MONSTER, HWGMobs.MERC, config.merc_spawn_weight, config.merc_min_group,
 				config.merc_max_group);
+
 		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInOverworld()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.TAIGA),
-				SpawnGroup.MONSTER, HWGMobs.MERC, config.merc_spawn_weight, config.merc_min_group,
-				config.merc_max_group);
-		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInOverworld()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.TAIGA),
+				BiomeSelectors.all().and(context -> parseBiomes(config.spy_biomes, context)),
 				SpawnGroup.MONSTER, HWGMobs.SPY, config.spy_spawn_weight, config.spy_min_group, config.spy_max_group);
+
 		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInOverworld()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.DESERT),
-				SpawnGroup.MONSTER, HWGMobs.MERC, config.merc_spawn_weight, config.merc_min_group,
-				config.merc_max_group);
-		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInOverworld()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.MESA),
-				SpawnGroup.MONSTER, HWGMobs.MERC, config.merc_spawn_weight, config.merc_min_group,
-				config.merc_max_group);
-		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInOverworld()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.MESA),
-				SpawnGroup.MONSTER, HWGMobs.SPY, config.spy_spawn_weight, config.spy_min_group, config.spy_max_group);
-		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInOverworld()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.JUNGLE),
-				SpawnGroup.MONSTER, HWGMobs.MERC, config.merc_spawn_weight, config.merc_min_group,
-				config.merc_max_group);
-		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInOverworld()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.JUNGLE),
-				SpawnGroup.MONSTER, HWGMobs.SPY, config.spy_spawn_weight, config.spy_min_group, config.spy_max_group);
-		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInOverworld()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.PLAINS),
-				SpawnGroup.MONSTER, HWGMobs.MERC, config.merc_spawn_weight, config.merc_min_group,
-				config.merc_max_group);
-		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInOverworld()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.ICY),
-				SpawnGroup.MONSTER, HWGMobs.MERC, config.merc_spawn_weight, config.merc_min_group,
-				config.merc_max_group);
-		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInTheNether()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.NETHER),
+				BiomeSelectors.all().and(context -> parseBiomes(config.lesser_biomes, context)),
 				SpawnGroup.MONSTER, HWGMobs.TECHNOLESSER, config.lesser_spawn_weight, config.lesser_min_group,
 				config.lesser_max_group);
+
 		BiomeModifications.addSpawn(
-				BiomeSelectors.foundInTheNether()
-						.and(context -> context.getBiome().getCategory() == Biome.Category.NETHER),
+				BiomeSelectors.all().and(context -> parseBiomes(config.greater_biomes, context)),
 				SpawnGroup.MONSTER, HWGMobs.TECHNOGREATER, config.greater_spawn_weight, config.greater_min_group,
 				config.greater_max_group);
+	}
+
+	private static boolean parseBiomes(List<String> biomes, BiomeSelectionContext biomeContext) {
+		return biomes.contains(biomeContext.getBiomeKey().getValue().toString())
+				|| biomes.contains("#" + biomeContext.getBiome().getCategory().asString());
 	}
 }
