@@ -65,24 +65,51 @@
 	"category.hwg.binds": "HWG",
 	"text.autoconfig.hwg.title": "Happiness is a Warm Gun Config",
 	"text.autoconfig.hwg.option.spawn": "Spawn Settings",
+	"text.autoconfig.hwg.option.spawn.merc_biomes.@Tooltip": "Use # for Biome Category names and modid:biome_id for registry name",
+	"text.autoconfig.hwg.option.spawn.merc_biomes": "Merc Spawn Biomes",
 	"text.autoconfig.hwg.option.spawn.merc_spawn_weight": "Merc Spawn Weight",
 	"text.autoconfig.hwg.option.spawn.merc_min_group": "Merc Max Group",
 	"text.autoconfig.hwg.option.spawn.merc_max_group": "Merc Max Group",
+	"text.autoconfig.hwg.option.spawn.spy_biomes.@Tooltip": "Use # for Biome Category names and modid:biome_id for registry name",
+	"text.autoconfig.hwg.option.spawn.spy_biomes": "Spy Spawn Biomes",
 	"text.autoconfig.hwg.option.spawn.spy_spawn_weight": "Spy Spawn Weight",
 	"text.autoconfig.hwg.option.spawn.spy_min_group": "Spy Max Group",
 	"text.autoconfig.hwg.option.spawn.spy_max_group": "Spy Max Group",
+	"text.autoconfig.hwg.option.spawn.lesser_biomes.@Tooltip": "Use # for Biome Category names and modid:biome_id for registry name",
+	"text.autoconfig.hwg.option.spawn.lesser_biomes": "Lesser Technodemon Spawn Biomes",
 	"text.autoconfig.hwg.option.spawn.lesser_spawn_weight": "Lesser Technodemon Spawn Weight",
 	"text.autoconfig.hwg.option.spawn.lesser_min_group": "Lesser Technodemon Max Group",
 	"text.autoconfig.hwg.option.spawn.lesser_max_group": "Lesser Technodemon Max Group",
+	"text.autoconfig.hwg.option.spawn.greater_biomes.@Tooltip": "Use # for Biome Category names and modid:biome_id for registry name",
+	"text.autoconfig.hwg.option.spawn.greater_biomes": "Greater Technodemon Spawn Biomes",
 	"text.autoconfig.hwg.option.spawn.greater_spawn_weight": "Greater Technodemon Spawn Weight",
 	"text.autoconfig.hwg.option.spawn.greater_min_group": "Greater Technodemon Max Group",
 	"text.autoconfig.hwg.option.spawn.greater_max_group": "Greater Technodemon Max Group",
 	"text.autoconfig.hwg.option.stats": "Mob Stat Settings",
 	"text.autoconfig.hwg.option.stats.merc_health": "Merc Max Health",
+	"text.autoconfig.hwg.option.stats.merc_exp": "Merc Experince",
 	"text.autoconfig.hwg.option.stats.spy_health": "Spy Max Health",
+	"text.autoconfig.hwg.option.stats.spy_exp": "Spy Experince",
 	"text.autoconfig.hwg.option.stats.lesser_health": "Lesser Technodemon Max Health",
+	"text.autoconfig.hwg.option.stats.lesser_exp": "Lesser Technodemon Experince",
 	"text.autoconfig.hwg.option.stats.greater_health": "Greater Technodemon Max Health",
+	"text.autoconfig.hwg.option.stats.greater_exp": "Greater Technodemon Experince",
 	"text.autoconfig.hwg.option.weapons": "Weapon Settings",
 	"text.autoconfig.hwg.option.weapons.rocket_breaks": "Rockets Break Blocks",
+	"text.autoconfig.hwg.option.weapons.pistol_damage": "Pistol Damage",
+	"text.autoconfig.hwg.option.weapons.golden_pistol_damage": "Golden Pistol Damage",
+	"text.autoconfig.hwg.option.weapons.silenced_pistol_damage": "Silenced Pistol Damage",
+	"text.autoconfig.hwg.option.weapons.luger_damage": "Lugar Damage",
+	"text.autoconfig.hwg.option.weapons.ak47_damage": "AK-47 Damage",
+	"text.autoconfig.hwg.option.weapons.sniper_damage": "Sniper Damage",
+	"text.autoconfig.hwg.option.weapons.sniper_scoped_damage": "Sniper Scoped Damage",
+	"text.autoconfig.hwg.option.weapons.minigun_damage": "Minigun Damage",
+	"text.autoconfig.hwg.option.weapons.smg_damage": "SMG Damage",
+	"text.autoconfig.hwg.option.weapons.hellhorse_damage": "Hellhorse Damage",
+	"text.autoconfig.hwg.option.weapons.tommy_damage": "Tommy Gun Damage",
+	"text.autoconfig.hwg.option.weapons.shotgun_damage": "Shotgun Damage",
+	"text.autoconfig.hwg.option.weapons.meanie_damage": "Meanie Damage",
+	"text.autoconfig.hwg.option.weapons.balrog_damage": "Balrog Damage",
+	"text.autoconfig.hwg.option.weapons.brimstone_damage": "Brimstone Damage",
 	"itemGroup.hwg.weapons": "HWG Weapons"
 }
